fix spacing again

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,6 +337,3 @@ footer {
 		display: none;
 	}
 }
-
-#content br {display: none;}
-#content p br {display: inline;}
